# Robotarm_motion_planning_and_perception

./: README.md  STARTUP.md  architecture.md
isaac-usd/: bootstrap_graphs.py
so-arm/: README.md
so-arm/so101_ws/src/so101_bringup/launch/: bringup_full.launch.py  bringup_moveit.launch.py
so-arm/so101_ws/src/so101_description/urdf/: so101_new_calib.urdf
so-arm/so101_ws/src/so101_moveit_config/config/: ros2_controllers.yaml  so101_new_calib.ros2_control.xacro  so101_new_calib.srdf  so101_new_calib.urdf.xacro
so-arm/so101_ws/src/so101_state_machine/: package.xml  setup.py
so-arm/so101_ws/src/so101_state_machine/so101_state_machine/: bt_node.py  cup_detector.py
